--- a/geoportal_1/src/main/webapp/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/includes.jspf
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" media="print" href="resources/css/print.css" />
 <script type="text/javascript" src="//maps.google.com/maps/api/js?v=3.10&amp;sensor=false"></script>
 <script type="text/javascript" src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
 <!-- <script type="text/javascript" src="resources/javascript/DataTables/media/js/jquery.dataTables.min.js"></script>-->
@@ -14,6 +15,7 @@
 <script type="text/javascript" src="resources/javascript/jquery.scrollTo-min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>
 <script type="text/javascript" src="resources/javascript/panZoom.js"></script>
+<script type="text/javascript" src="resources/javascript/template.js"></script>
 <script type="text/javascript" src="resources/javascript/utility.js"></script>
 <script type="text/javascript" src="resources/javascript/institution.js"></script>
 <script type="text/javascript" src="resources/javascript/errorObject.js"></script>
