--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -10,7 +10,7 @@ This file has been heavily modified from the original template
 :focus {outline:none;}
 
 body {
-	text-align: center;
+	text-align: left;
 	margin: 0; 
 	padding: 0;
 	background: #cccccc;/* url(../media/bg_tile.gif)  repeat;*/
@@ -48,14 +48,13 @@ h3 {
 }
 
 .styledButton {
-	-moz-border-radius: 4px 4px 4px 4px;
-	border-radius: 4px 4px 4px 4px;
-    background: url("../media/tab_bg.gif") repeat-x scroll 50% 50% #FFFFFF;
-    border: 1px solid #AEAEAE;
-    color: #333333;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+    background: linear-gradient(#FFFFFF, #EEEEEE) repeat scroll 0 0 transparent;
+    border: 1px solid #999999;
+    color: #000000;
     cursor: pointer;
-    font-family: tahoma;
-    margin: 0.5em 0.4em 0.5em 0;
+    font-family: arial;
     padding: 2px 0px;
     min-width: 88px;
     text-align: center;
@@ -86,9 +85,9 @@ h3 {
 }
 
 .shadowDown {
-  -moz-box-shadow:    0px 3px 4px 0px #888888 inset;
-  -webkit-box-shadow: 0px 3px 4px 0px #888888 inset;
-  box-shadow:         0px 3px 4px 0px #888888 inset;
+  -moz-box-shadow:    0px 3px 4px -1px #888888 inset;
+  -webkit-box-shadow: 0px 3px 4px -1px #888888 inset;
+  box-shadow:         0px 3px 4px -1px #888888 inset;
 }
 
 .styledButton:hover {
@@ -96,30 +95,35 @@ h3 {
 	}
 
 .styledButtonSmall {
-	-moz-border-radius: 4px 4px 4px 4px;
-	border-radius: 4px 4px 4px 4px;
-	border: 1px solid #999999;
-    background: #EEE;
-    color: #000;
+	-moz-border-radius: 3px 3px 3px 3px;
+    /*background: none repeat scroll 0 0 #EEEEEE;*/
+    background: linear-gradient(#FFFFFF, #EEEEEE) repeat scroll 0 0 transparent;
+    border: 1px solid #999999;
+    border-radius: 3px 3px 3px 3px;
+    color: #000000;
     cursor: pointer;
-    font-family: arial;
-   /* margin: 0.5em 0.4em 0.5em 0;*/
-    min-width: 66px;
-    height: 20px;
-    text-align: center;
     display: inline-block;
-    font-size: 11px;
+    font-family: arial;
+    font-size: 12px;
     font-weight: normal;
+    line-height: 18px;
+    min-width: 50px;
+    padding: 1px 10px;
+    text-align: center;
 }
 
 .searchButton {
     background: #307DB9;
     color: #FFF;
     border: 0;
-   /* margin: 0.5em 0.4em 0.5em 0;*/
-    min-width: 66px;
-    height: 22px;
-    font-size: 12px;    
+    padding: 2px 11px;
+   /* margin: 0.5em 0.4em 0.5em 0;*/ 
+}
+
+.mapClearButton {
+	float: right;
+    margin-right: 15px;
+    margin-top: 5px;
 }
 
 .styledButtonSmall:hover {
@@ -157,7 +161,7 @@ h3 {
  	/*width: 1002px;*/
  	margin: 0 auto;
  	/*background-color: #fff;*/
- 	text-align: left;
+ 	/*text-align: left;*/
  	opacity: 0;
  }
  
@@ -166,8 +170,8 @@ h3 {
 	height: 120px;
   	/*background-color: #edf4fa;*/
   	background-color: #ffffff;
-	border-right: #333 solid 1px;
-	border-left: #333 solid 1px;
+	border-right: #CCCCCC solid 1px;
+	border-left: #CCCCCC solid 1px;
 	border-bottom: #999999 solid 1px;
 }
 
@@ -203,12 +207,12 @@ h3 {
 	color:#0755AC;
 }
 
-span.infoLinks {
+.infoLinks {
 	cursor: pointer;
 	color:#000;
 }
 
-span.infoLinks:hover {
+.infoLinks:hover {
 	color:#0755AC;
 }
 
@@ -244,7 +248,10 @@ span.infoLinks:hover {
 	z-index: 999;
 	padding-left: 11px;
 	text-align: left;
-	width: 100%;
+}
+
+.searchFormInput > .styledSelect {
+	width: 220px;
 }
 
 .styledSelect:hover{
@@ -257,15 +264,20 @@ span.infoLinks:hover {
 }
 
 .styledSelectText {
-    display: inline-block;
+  display: inline-block;
+    min-width: 55px;
     overflow: hidden;
-    white-space: nowrap;	
+    white-space: nowrap;
 }
 
 .styledSelectArrow {
 	float: right;
-	margin-top: 1px;
-	padding-right: 11px;
+	background: url("../media/geodata-sprite.png") no-repeat scroll -66px -83px transparent;
+  	width: 11px;
+ 	height: 12px;
+ 	margin-right: 5px;
+    margin-top: -2px;
+ 	display: inline-block;
 }
 
 .styledSelectMenu {
@@ -419,9 +431,9 @@ span.infoLinks:hover {
 /* Container */
 #container {
 	background-color: #fff;
-	border-right: #333 solid 1px;
-	border-left: #333 solid 1px; 
-	border-bottom: #333 solid 1px; 
+	border-right: #CCCCCC solid 1px;
+	border-left: #CCCCCC solid 1px; 
+	border-bottom: #CCCCCC solid 1px; 
 	min-height:680px;
 	height: 100%;
 }
@@ -432,6 +444,7 @@ span.infoLinks:hover {
 	border-right: #999 solid 1px; 	 
 	float:left;
 	cursor: default;
+	display: none;
 }
 
 #left_tabs {
@@ -469,7 +482,11 @@ span.infoLinks:hover {
 
 .sub_header button.styledSelect {
 	font-size: 11px;
-	max-width: 88px;
+	width: 75px;
+}
+
+.sub_header .styledSelectText {
+	width: 60px;
 }
 
 .arrow_buttons {
@@ -545,18 +562,13 @@ span.infoLinks:hover {
 #roll_right {
 	float:left;
 	min-height:680px;
-	width:21px;
+	width:25px;
 	border-right: 1px solid #999999;
-	background: #cccccc url(../media/bg_grayfade_vert.png)  repeat-y;
-	display: none;
+	background-color: #eeeeee;
+	display: block;
     padding: 0px;
   	margin-left: 0px;
   	height: 100%;
-}
-
-#roll_right > img {
-	margin-left: 1px;
-	margin-top: 4px;
 }
 
 .sub_headerButtons {
@@ -613,14 +625,20 @@ textarea:focus {
 	padding-top: 2px;
 	padding-left: 50px;
 	font-family: arial,sans-serif;
-	font-size: 14px;
+	font-size: 12px;
 	/*width: 345px;*/
+}
+
+.advancedSearchButtons {
+	margin-left: 80px;
+    margin-top: 25px;
 }
 
 .basicSearch {
 	display: inline-block;
 	line-height: 22px;
 	padding-right: 6px;
+	width: 306px;
 }
 
 .labelText {
@@ -628,7 +646,11 @@ textarea:focus {
 }
 
 .basicSearch input[type="text"] {
-	width: 218px;
+	width: 220px;
+}
+
+.advancedSearch {
+	display: none;
 }
 
 #geosearchDiv {
@@ -637,14 +659,14 @@ textarea:focus {
 	right: 4px;
 	width: 253px;
 	z-index: 1001;*/
+	display: inline-block;
 }
 
-#geosearchDiv > input {
+#geosearchDiv input {
 	/*background: none repeat scroll 0 0 transparent;
 	border: 1px solid #AAAAAA;
 	color: #FFFFFF;
 	height: 17px;
-	width: 220px;
 	opacity: .7;
 	filter:Alpha(Opacity=70);
 	padding-left: 3px;
@@ -700,48 +722,57 @@ div#goButton:hover {
 	visibility: hidden;	
 }
 
-#advancedSearchBox {
-	display: none;
-	width: 350px;
-}
-
-.advancedSearchButtons{
-	text-align: right;
-	margin-right: 5px;
-}
-
-#advancedSearchClear {
-	margin:2px 4px;
-	/*border:none;*/
-}
-
-#advancedSearchSubmit {
-	margin:2px 0px;
-	/*border:none;*/
-}
-
 .searchFormRow {
-	/*height: 27px;*/
 	line-height: 27px;
 }
 
-.searchFormRowTwo {
-	margin-top: -4px;	
-}	
+.searchFormRow  > label {
+	display: inline-block;
+    width: 76px;
+    font-family: verdana;
+    font-size: 12px;
+}
 
-.searchFormInput {
-	width: 230px;
+.searchFormRow.advancedSearch > label {
+	width: 77px;
+}
+
+.searchFormRow.advancedSearch > input[type="text"] {
+	width: 192px;
+}
+
+.searchFormRow .styledSelectText {
+	min-width: 190px;
 }
 
 #moreSearchOptions {
-	/*margin-top: 5px;*/
-	/*margin-left: 55px;*/
-	/*float: right;*/
+
 }
 
 #lessSearchOptions {
 	float: right;
-	/*margin-left: 78px;*/
+}
+
+#searchForm {
+	display: inline-block;
+}
+
+.searchCol {
+	position: absolute;
+	top: 70px;
+	width: 302px;
+	margin-right: 42px;
+}
+#searchCol1 {
+	left: 50px;
+}
+
+#searchCol2 {
+	left: 400px;
+}
+
+#searchCol3 {
+	left: 750px;
 }
 
 .searchToggle {
@@ -755,14 +786,18 @@ div#goButton:hover {
 	color: yellow;
 	} 
 
-.searchFormLabel {
-    color: #0755AC;
-    display: inline-block;
-    font-weight: bold;
+.whereBox {
+	    color: #0755AC;
+	    font-weight: bold;
+}
+
+.whatBox {
+	    color: #0755AC;
+	    font-weight: bold;
 }
 
 .formCheckbox {
-	margin-left: -5px;	
+    padding-left: 76px;
 	display: inline-block;
 	width: 228px;
 }
@@ -838,7 +873,6 @@ div#goButton:hover {
 	padding-bottom:20px;
 	padding-left:30px;
 	padding-right:30px;
-	font-size: 12px;
 }
 
 /* footer */      
@@ -847,28 +881,37 @@ div#goButton:hover {
  	vertical-align:middle;*/
 	height: 30px;
 	background: #FFF;
-	border-right: #333 solid 1px;
-	border-left: #333 solid 1px;
-	border-bottom: #333 solid 1px;
+	border-right: #DDD solid 1px;
+	border-left: #DDD solid 1px;
+	border-bottom: #DDD solid 1px;
 	font-size: 13px;
 }	
  
 #footerLogos {
-	float: right;
-	margin-right: 80px;
-	margin-top: 2px;
+	float: left;
+	margin-left: 20px;
+	height: 30px;
+	overflow: hidden;
 }
 
 #footerLogos > div {
-	display: inline-block;
-	height: 25px;
-	padding-right: 10px;
-	cursor: pointer;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 30px;
+    padding-right: 10px;
+    vertical-align: text-bottom;
 }
 	
+#footerLogos .institutionLogo{
+	background: url("../media/geodata-sprite.png") no-repeat scroll -46px -206px transparent;
+	height: 30px;
+	width: 66px;
+}
+
 #footerInfo {
-	line-height: 30px;
-	margin-left: 8px;
+    float: right;
+    line-height: 30px;
+    margin-right: 20px;
 }
 
 #footer a{
@@ -951,20 +994,28 @@ div.colorCell:hover {
 	/*word-wrap: break-word;*/
 }
 
-.metadataButton {
+.viewLibraryRecordControl {
+	background: url("../media/geodata-sprite.png") no-repeat scroll -131px -55px transparent;
+	height: 17px;
+	width: 17px;	
+}
+
+.viewMetadataControl {
 	background: url("../media/geodata-sprite.png") no-repeat scroll -131px -55px transparent;
 	height: 17px;
 	width: 17px;	
 }
 
 .saveControl {
-	background: url("../media/geodata-sprite.png") no-repeat scroll -102px -33px transparent;
 	height: 17px;
-	width: 17px;	
+	width: 17px;
+}
+.notInCart {
+	background: url("../media/geodata-sprite.png") no-repeat scroll -102px -33px transparent;
 }
 
-.saveControlChecked {
-	background: url("../media/geodata-sprite.png") no-repeat scroll -125px -33px transparent;	
+.inCart {
+	background: url("../media/geodata-sprite.png") no-repeat scroll -130px -33px transparent;	
 }
 
 .dialog {
@@ -1285,3 +1336,130 @@ Repositories
 .princetonIcon {
 	background: url("../media/geodata-sprite.png") no-repeat scroll -56px -10px transparent;
 }
+
+/*************
+Info Bubble
+*************/
+
+.closeBubble {
+		background: url("../media/geodata-sprite.png") no-repeat scroll -66px -134px transparent;
+		width: 20px;
+		height: 20px;
+		float: right;
+}
+
+.infoBubbleText {
+	padding: 10px 20px;
+	left: 2px;
+    top: 2px;
+	color: white;
+	font: 24px "Univers", Sans-Serif;
+	z-index: 2147483647;
+	text-align: left;
+}
+
+.infoBubbleText h1 {
+	color: white;
+	font: 55px "Univers", Sans-Serif;
+	font-style: oblique;
+}
+
+.infoBubbleText label {
+	color: white;
+	font: 12px "Univers", Sans-Serif;
+}
+
+.triangle-isosceles.top-arrow:after {
+    border-color: #6B91D5 transparent;
+    border-width: 0 15px 155px;
+    bottom: auto;
+    left: 24px;
+    right: auto;
+    top: -155px;
+    transform: scale(1.01);
+}
+
+.triangle-isosceles.left-arrow:after {
+    border-color: #648ACE transparent;
+    border-width: 0 0 27px 56px;
+    bottom: auto;
+    left: -51px;
+    top: 125px;
+    transform: rotate(14deg);
+}
+
+.triangle-isosceles:after {
+    border-color: #6B91D5 transparent;
+    border-style: solid;
+    border-width: 15px 15px 0;
+    bottom: -15px;
+    content: "";
+    display: block;
+    left: 50px;
+    position: absolute;
+    width: 0;
+}
+
+.triangle-isosceles.top-arrow {
+    background: linear-gradient(#6B91D5, #577CBE) repeat scroll 0 0 transparent;
+}
+
+.triangle-isosceles.left-arrow {
+    background: linear-gradient(#6B91D5, #577CBE) repeat scroll 0 0 transparent;
+}
+
+.triangle-isosceles {
+    background: linear-gradient(#6B91D5, #577CBE) repeat scroll 0 0 transparent;
+    border-radius: 15px;
+    position: absolute;
+}
+
+.infoBubbleBackground {
+padding: 10px 20px;
+color: white;
+box-shadow: 0 0 7px black;
+display: none;
+/*z-index: 2147483647;*/
+}
+.triangle-isoscelesBackground.top-arrowBackground:after {
+    border-color: #61729E transparent;
+    border-width: 0 17px 154px;
+    bottom: auto;
+    left: 24px;
+    right: auto;
+    top: -154px;
+    transform: scale(1.01);
+}
+
+.triangle-isoscelesBackground.left-arrowBackground:after {    
+    border-width: 0 0 31px 59px;
+    bottom: auto;
+    left: -55px;
+    top: 124px;
+    transform: rotate(14deg);
+}
+
+.triangle-isoscelesBackground:after {
+    border-color: #61729E transparent;
+    border-style: solid;
+    border-width: 15px 15px 0;
+    bottom: -15px;
+    content: "";
+    display: block;
+    left: 50px;
+    position: absolute;
+    width: 0;
+}
+.triangle-isoscelesBackground.top-arrowBackground {
+    background-color: #61729E;
+}
+
+.triangle-isoscelesBackground.left-arrowBackground {
+    background-color: #61729E;
+}
+.triangle-isoscelesBackground {
+    background-color: #61729E;
+    border-radius: 15px;
+    position: absolute;
+}
+
