--- a/geoportal_1/src/main/webapp/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/includes.jspf
@@ -1,9 +1,4 @@
-<!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
-<link rel="stylesheet" href="resources/css/google.css" type="text/css" />
-<link rel="stylesheet" href="resources/css/jquery-ui.custom.css" type="text/css" />
-<link rel="stylesheet" href="resources/css/structure.css" type="text/css" />
-<link rel="stylesheet" href="resources/css/mapDiv.css" type="text/css" />
-<link rel="stylesheet" href="resources/css/dataTable.css" type="text/css" />
+<link rel="stylesheet" href="resources/css/ogp.css" type="text/css" />
 <link rel="stylesheet" type="text/css" media="print" href="resources/css/print.css" />
 <script type="text/javascript" src="//maps.google.com/maps/api/js?v=3.10&amp;sensor=false"></script>
 <script type="text/javascript" src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
@@ -11,24 +6,12 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
 <!-- <script type="text/javascript" src="resources/javascript/DataTables/media/js/jquery.dataTables.min.js"></script>-->
+<script type="text/javascript" src="resources/javascript/dataTables.scroller.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.scrollTo-min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>
 <script type="text/javascript" src="resources/javascript/panZoom.js"></script>
-<script type="text/javascript" src="resources/javascript/template.js"></script>
-<script type="text/javascript" src="resources/javascript/utility.js"></script>
-<script type="text/javascript" src="resources/javascript/institution.js"></script>
-<script type="text/javascript" src="resources/javascript/errorObject.js"></script>
-<script type="text/javascript" src="resources/javascript/analytics.js"></script>
-<script type="text/javascript" src="resources/javascript/mapDiv.js"></script>
-<script type="text/javascript" src="resources/javascript/layerSettings.js"></script>
-<script type="text/javascript" src="resources/javascript/layerTable.js"></script>
-<script type="text/javascript" src="resources/javascript/login.js"></script>
-<script type="text/javascript" src="resources/javascript/userInterface.js"></script>
-<script type="text/javascript" src="resources/javascript/main.js"></script>
-<script type="text/javascript" src="resources/javascript/solr.js"></script>
-<script type="text/javascript" src="resources/javascript/download.js"></script>
-<script type="text/javascript" src="resources/javascript/geoCommonsExport.js"></script>
+<script type="text/javascript" src="resources/javascript/ogp.js"></script>
 
 <!-- <script type="text/javascript" src="javascript/testOverviewMap.js"></script>-->
 <!-- We should move to using a cdn where possible with a locally hosted fallback -->
